CMS-238: Fix the toggle button spacing was off

--- a/src/gatsby/src/styles/parks.scss
+++ b/src/gatsby/src/styles/parks.scss
@@ -43,15 +43,6 @@
         outline: $colorBlueMed solid 2px;
         outline-offset: 0px;
       }
-      &.park-overview-link {
-        display: inline-block;
-        text-decoration: none;
-        margin-top: 24px;
-        &:hover, &:focus-visible {
-          color: $colorBlue;
-          text-decoration: underline;
-        }
-      }
     }
     & > div.w-100:last-of-type {
       min-height: calc(100vh - 380px);
